# lib-r3vi

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/buffer/: grid_hashmap.rs  index_hashmap.rs  mod.rs  singleton.rs  vec.rs
src/projection/: decorate_sequence.rs  enumerate_sequence.rs  filter_map_sequence.rs  filter_sequence.rs  flatten_grid.rs  flatten_sequence.rs  flatten_singleton.rs  grid_offset.rs  list2seq.rs  map_index_item.rs  map_index_key.rs  map_list.rs  map_sequence.rs  map_singleton.rs  mod.rs  projection_helper.rs  seq2idx.rs  sgl2idx.rs  sgl2seq.rs  vec2bin.rs  vec2json.rs  vec2list.rs  vec2seq.rs
src/view/: channel.rs  mod.rs  observer.rs  port.rs
src/view/grid/: mod.rs  window_iterator.rs
src/view/index/: mod.rs
src/view/list/: mod.rs
src/view/sequence/: mod.rs
src/view/singleton/: mod.rs
