[package]
authors = ["Michael Sippel <micha@fragmental.art>"]
edition = "2018"
name = "r3vi"
version = "0.1.0"

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "*"

[dependencies.async-std]
version = "1.9.0"
features = ["unstable", "attributes"]
